Show labels on compute-env view
Signed-off-by: Jordi Deu-Pons <jordi@jordeu.net>